--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
@@ -12,7 +13,7 @@
   	<header>
 		<nav class="container">
 			<div class="row">
-				<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+				<a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
 				<ul>
 					<li><a href="#">o mnie</a></li>
 					<li><a href="#">Umiejętności</a></li>
@@ -53,16 +54,17 @@
                 	<div class="row">
                     	<div class="col-s"><i class="devicon-html5-plain-wordmark"></i></div>
                     	<div class="col-s"><i class="devicon-css3-plain-wordmark"></i></div>
-                    	<div class="col-s"><i class="devicon-javascript-plain"></i></div>
-                    	<div class="col-s"><i class="devicon-jquery-plain-wordmark"></i></div>
                     	<div class="col-s"><i class="devicon-ubuntu-plain-wordmark"></i></div>
+                    	<div class="col-s"><i class="devicon-mysql-plain-wordmark"></i></div>
+                    	<div class="col-s"><i class="devicon-bootstrap-plain-wordmark"></i></div>
                 	</div>
+                	<h3 class="words">Podczas kursu, używałem technologii:</h3>
                 	<div class="row">
                     	<div class="col-s"><i class="devicon-sass-original"></i></div>
                     	<div class="col-s"><i class="devicon-grunt-line-wordmark"></i></div>
                     	<div class="col-s"><i class="devicon-git-plain-wordmark"></i></div>
-                    	<div class="col-s"><i class="devicon-bootstrap-plain-wordmark"></i></div>
-                    	<div class="col-s"><i class="devicon-mysql-plain-wordmark"></i></div>
+                    	<div class="col-s"><i class="devicon-javascript-plain"></i></div>
+                    	<div class="col-s"><i class="devicon-jquery-plain-wordmark"></i></div>
                 	</div>
  				</div>
 			</div>
@@ -79,9 +81,54 @@
 							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
 							<p>Pierwszy projekt</p>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-12">
+							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<p>Drugi projekt</p>
+						</div>
+						<div class="col-md-12">
+							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<p>Trzeci projekt</p>
 						</div>
 					</div>
+				</div>
+				<div class="col-md-12">
+					<div class="row second">
+						<div class="col-md-12">
+							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<p>Trzeci projekt</p>
+						</div>
+						<div class="col-md-12">
+							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<p>Trzeci projekt</p>
+						</div>
+						<div class="col-md-12">
+							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<p>Trzeci projekt</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="blue-contact">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<p class="p-mail">grz.rybczynski@gmail.com</p>
+				</div>
+				<div class="col-md-4">
+					<a href="#" title="Skontaktuj się" target="_blank"><button class="icon-btn facebook"><i class="fa fa-facebook"></i></button></a>
+					<a href="#" title="Skontaktuj się" target="_blank"><button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button></a>
+					<a href="#" title="Skontaktuj się" target="_blank"><button class="icon-btn github"><i class="fa fa-github"></i></button></a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<p>©2016 Grzegorz Rybczyński. All rights reserved.</p>
 				</div>
 			</div>
 		</div>
