--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="row">
 			<h1><span class="first-letter">H</span>ello, world!</h1>
   			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut accumsan mollis tempor. Vivamus volutpat ligula at urna interdum placerat. Morbi vestibulum volutpat dolor id interdum.</p>
-  			<p><a class="btn btn-primary btn-lg" href="#" role="button">Więcej o mnie</a></p>
+  			<p><a class="btn btn-primary btn-lg" href="#about" role="button">Więcej o mnie</a></p>
   			</div>
 		</div>
 	</div>
