--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   	<header>
 		<nav class="container">
 			<div class="row">
-				<a href="#"><img src="vendor-image/GR.png" alt="" /></a>
+				<a href="#"><img src="vendor-image/images.png" alt="" /></a>
 				<ul>
 					<li><a href="#">o mnie</a></li>
 					<li><a href="#">Umiejętności</a></li>
@@ -80,7 +80,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<p>Pierwszy projekt</p>
-							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<img class="img-responsive" src="https://postimg.org/image/6cxsembtb/0a11bf01/" alt="">
 							<div>
 							<a class="link-live" href="#" target="_blank">Live</a>
 							<a class="link-git" href="#" target="_blank">Github</a>
