--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<p>Pierwszy projekt</p>
-							<img class="img-responsive" src="https://postimg.org/image/6cxsembtb/0a11bf01/" alt="">
+							<img class="img-responsive" src="https://s27.postimg.org/bocozbxw3/praca1.jpg" alt="">
 							<div>
 							<a class="link-live" href="#" target="_blank">Live</a>
 							<a class="link-git" href="#" target="_blank">Github</a>
