--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						</div>
 						<div class="col-md-12">
 							<p>Drugi projekt</p>
-							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<img class="img-responsive" src="https://s20.postimg.org/ytt9ctzml/praca2.jpg" alt="">
 							<div>
 							<a class="link-live" href="#" target="_blank">Live</a>
 							<a class="link-git" href="#" target="_blank">Github</a>
@@ -96,7 +96,7 @@
 						</div>
 						<div class="col-md-12">
 							<p>Trzeci projekt</p>
-							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<img class="img-responsive" src="https://s20.postimg.org/ytt9ctzml/praca2.jpg" alt="">
 							<div>
 							<a class="link-live" href="#" target="_blank">Live</a>
 							<a class="link-git" href="#" target="_blank">Github</a>
