--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
   	<header>
 		<nav class="container">
 			<div class="row">
-				<a href="#"><img src="vendor-image/images.png" alt="" /></a>
+				<a href="#"><img class="logo" src="https://www.shopify.com/tools/logo-maker/show/OGZTdHRXTUxOZnB3T3IvNkRIYXIwUT09LS1vVy9ZSjRQMFBSMkd0TkdrcEhMRWt3PT0=--18b47b68206bafe7cb1183476ed64e3cc9660409.png" alt="" /></a>
 				<ul>
-					<li><a href="#">o mnie</a></li>
-					<li><a href="#">Umiejętności</a></li>
-					<li><a href="#">prace</a></li>
-					<li><a href="#">kontakt</a></li>
+					<li><a href="#section1">o mnie</a></li>
+					<li><a href="#section2">Umiejętności</a></li>
+					<li><a href="#section3">prace</a></li>
+					<li><a href="#section4">kontakt</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -28,11 +28,11 @@
 			<div class="row">
 			<h1><span class="first-letter">H</span>ello, world!</h1>
   			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut accumsan mollis tempor. Vivamus volutpat ligula at urna interdum placerat. Morbi vestibulum volutpat dolor id interdum.</p>
-  			<p><a class="btn btn-primary btn-lg" href="#about" role="button">Więcej o mnie</a></p>
+  			<p><a class="btn btn-primary btn-lg" href="#section1" role="button">Więcej o mnie</a></p>
   			</div>
 		</div>
 	</div>
-	<section class="about">
+	<section class="about" id="section1">
 		<div class="container">
 			<div class="row">
 				<h2 class="about-me underline"><span class="first-letter">O</span> mnie</h2>
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="skills">
+	<section class="skills" id="section2">
 		<div class="container">
 			<div class="row">
 				<h3 class="h-skill underline"><span class="first-letter">U</span>miejętności</h3>
@@ -71,7 +71,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="works">
+	<section class="works" id="section3">
 		<div class="container">
 			<div class="row">
 				<h4 class="about-me underline"><span class="first-letter">P</span>ortfolio</h4>
@@ -79,27 +79,27 @@
 				<div class="col-md-12">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Pierwszy projekt</p>
-							<img class="img-responsive" src="https://s27.postimg.org/bocozbxw3/praca1.jpg" alt="">
+							<p>Pierwsza wykonana strona</p>
+							<img class="img-responsive" src="images/praca2.jpg" alt="">
 							<div>
-							<a class="link-live" href="#" target="_blank">Live</a>
-							<a class="link-git" href="#" target="_blank">Github</a>
+							<a class="link-live" href="https://vitcum.github.io/Pierwsza-strona" target="_blank">Live</a>
+							<a class="link-git" href="https://github.com/vitcum/Pierwsza-strona" target="_blank">Github</a>
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>Drugi projekt</p>
-							<img class="img-responsive" src="https://s20.postimg.org/ytt9ctzml/praca2.jpg" alt="">
+							<p>Cięcie szablonu PSD</p>
+							<img class="img-responsive" src="images/praca5.jpg" alt="">
 							<div>
-							<a class="link-live" href="#" target="_blank">Live</a>
-							<a class="link-git" href="#" target="_blank">Github</a>
+							<a class="link-live" href="https://vitcum.github.io/Cutting-template" target="_blank">Live</a>
+							<a class="link-git" href="https://github.com/vitcum/Cutting-template" target="_blank">Github</a>
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>Trzeci projekt</p>
-							<img class="img-responsive" src="https://s20.postimg.org/ytt9ctzml/praca2.jpg" alt="">
+							<p>Przykładowa strona Fullpage.js</p>
+							<img class="img-responsive" src="images/praca7.jpg" alt="">
 							<div>
-							<a class="link-live" href="#" target="_blank">Live</a>
-							<a class="link-git" href="#" target="_blank">Github</a>
+							<a class="link-live" href="https://vitcum.github.io/Fullpage.js-Exampe-site" target="_blank">Live</a>
+							<a class="link-git" href="https://github.com/vitcum/Fullpage.js-Exampe-site" target="_blank">Github</a>
 							</div>
 						</div>
 					</div>
@@ -107,27 +107,27 @@
 				<div class="col-md-12">
 					<div class="row second">
 						<div class="col-md-12">
-							<p>Czwarty projekt</p>
-							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<p>Random Quote Machine</p>
+							<img class="img-responsive" src="images/praca4.jpg" alt="">
 							<div>
-							<a class="link-live" href="#" target="_blank">Live</a>
-							<a class="link-git" href="#" target="_blank">Github</a>
+							<a class="link-live" href="https://vitcum.github.io/Random-Quote-Machine" target="_blank">Live</a>
+							<a class="link-git" href="https://github.com/vitcum/Random-Quote-Machine" target="_blank">Github</a>
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>Piąty projekt</p>
-							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<p>Wyszukiwarka Krajów</p>
+							<img class="img-responsive" src="images/praca3.jpg" alt="">
 							<div>
-							<a class="link-live" href="#" target="_blank">Live</a>
-							<a class="link-git" href="#" target="_blank">Github</a>
+							<a class="link-live" href="https://vitcum.github.io/Search-Countries" target="_blank">Live</a>
+							<a class="link-git" href="https://github.com/vitcum/Search-Countries" target="_blank">Github</a>
 							</div>
 						</div>
 						<div class="col-md-12">
-							<p>Szósty projekt</p>
-							<img class="img-responsive" src="vendor-image/praca2.jpg" alt="">
+							<p>Tablica Kanban</p>
+							<img class="img-responsive" src="images/praca6.jpg" alt="">
 							<div>
-							<a class="link-live" href="#" target="_blank">Live</a>
-							<a class="link-git" href="#" target="_blank">Github</a>
+							<a class="link-live" href="https://vitcum.github.io/Tablica-Kanban" target="_blank">Live</a>
+							<a class="link-git" href="https://github.com/vitcum/Tablica-Kanban" target="_blank">Github</a>
 							</div>
 						</div>
 					</div>
@@ -135,16 +135,16 @@
 			</div>
 		</div>
 	</section>
-	<section class="blue-contact">
+	<section class="blue-contact" id="section4">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
 					<p class="p-mail">grz.rybczynski@gmail.com</p>
 				</div>
 				<div class="col-md-4">
-					<a href="#" title="Skontaktuj się" target="_blank"><button class="icon-btn linkedin"><i class="fa fa-linkedin"></i></button></a>
-					<a href="#" title="Skontaktuj się" target="_blank"><button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button></a>
-					<a href="#" title="Skontaktuj się" target="_blank"><button class="icon-btn github"><i class="fa fa-github"></i></button></a>
+					<a href="https://www.linkedin.com/in/grzegorz-rybczy%C5%84ski-b42b31120?trk=nav_responsive_tab_profile_pic" title="Skontaktuj się" target="_blank"><button class="icon-btn linkedin"><i class="fa fa-linkedin"></i></button></a>
+					<a href="https://plus.google.com/104462464214596411752" title="Skontaktuj się" target="_blank"><button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button></a>
+					<a href="https://github.com/vitcum" title="Skontaktuj się" target="_blank"><button class="icon-btn github"><i class="fa fa-github"></i></button></a>
 				</div>
 			</div>
 		</div>
