--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   			</div>
 		</div>
 	</div>
-	<section class="about" id="section1">
+	<section id="section1" class="about">
 		<div class="container">
 			<div class="row">
 				<h2 class="about-me underline"><span class="first-letter">O</span> mnie</h2>
@@ -47,10 +47,10 @@
 			</div>
 		</div>
 	</section>
-	<section class="skills" id="section2">
+	<section class="skills">
 		<div class="container">
 			<div class="row">
-				<h3 class="h-skill underline"><span class="first-letter">U</span>miejętności</h3>
+				<h3 class="h-skill underline" id="section2"><span class="first-letter">U</span>miejętności</h3>
                 <div class="col-md-12">
                 	<div class="row">
                     	<div class="col-s"><i class="devicon-html5-plain-wordmark"></i></div>
@@ -71,13 +71,13 @@
 			</div>
 		</div>
 	</section>
-	<section class="works" id="section3">
+	<section class="works">
 		<div class="container">
 			<div class="row">
 				<h4 class="about-me underline"><span class="first-letter">P</span>ortfolio</h4>
 			</div>
 				<div class="col-md-12">
-					<div class="row">
+					<div id="section3" class="row">
 						<div class="col-md-12">
 							<p>Pierwsza wykonana strona</p>
 							<img class="img-responsive" src="images/praca2.jpg" alt="">
