--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 			<div class="row">
 				<h4 class="about-me underline"><span class="first-letter">P</span>ortfolio</h4>
 			</div>
-				<div class="col-md-12">
+				<div class="col-s-12 col-md-12">
 					<div id="section3" class="row">
-						<div class="col-md-12">
+						<div class="col-s-12 col-md-12">
 							<p>Pierwsza wykonana strona</p>
 							<img class="img-responsive" src="images/praca2.jpg" alt="">
 							<div>
@@ -86,7 +86,7 @@
 							<a class="link-git" href="https://github.com/vitcum/Pierwsza-strona" target="_blank">Github</a>
 							</div>
 						</div>
-						<div class="col-md-12">
+						<div class="col-s-12 col-md-12">
 							<p>Cięcie szablonu PSD</p>
 							<img class="img-responsive" src="images/praca5.jpg" alt="">
 							<div>
@@ -94,7 +94,7 @@
 							<a class="link-git" href="https://github.com/vitcum/Cutting-template" target="_blank">Github</a>
 							</div>
 						</div>
-						<div class="col-md-12">
+						<div class="col-s-12 col-md-12">
 							<p>Przykładowa strona Fullpage.js</p>
 							<img class="img-responsive" src="images/praca7.jpg" alt="">
 							<div>
@@ -104,9 +104,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-12">
+				<div class="col-s-12 col-md-12">
 					<div class="row second">
-						<div class="col-md-12">
+						<div class="col-s-12 col-md-12">
 							<p>Random Quote Machine</p>
 							<img class="img-responsive" src="images/praca4.jpg" alt="">
 							<div>
@@ -114,7 +114,7 @@
 							<a class="link-git" href="https://github.com/vitcum/Random-Quote-Machine" target="_blank">Github</a>
 							</div>
 						</div>
-						<div class="col-md-12">
+						<div class="col-s-12 col-md-12">
 							<p>Wyszukiwarka Krajów</p>
 							<img class="img-responsive" src="images/praca3.jpg" alt="">
 							<div>
@@ -122,7 +122,7 @@
 							<a class="link-git" href="https://github.com/vitcum/Search-Countries" target="_blank">Github</a>
 							</div>
 						</div>
-						<div class="col-md-12">
+						<div class="col-s-12 col-md-12">
 							<p>Tablica Kanban</p>
 							<img class="img-responsive" src="images/praca6.jpg" alt="">
 							<div>
@@ -138,10 +138,10 @@
 	<section class="blue-contact" id="section4">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col-s-12 col-md-8">
 					<p class="p-mail">grz.rybczynski@gmail.com</p>
 				</div>
-				<div class="col-md-4">
+				<div class="col-s-12 col-md-4">
 					<a href="https://www.linkedin.com/in/grzegorz-rybczy%C5%84ski-b42b31120?trk=nav_responsive_tab_profile_pic" title="Skontaktuj się" target="_blank"><button class="icon-btn linkedin"><i class="fa fa-linkedin"></i></button></a>
 					<a href="https://plus.google.com/104462464214596411752" title="Skontaktuj się" target="_blank"><button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button></a>
 					<a href="https://github.com/vitcum" title="Skontaktuj się" target="_blank"><button class="icon-btn github"><i class="fa fa-github"></i></button></a>
@@ -152,7 +152,7 @@
 	<section class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-s-12 col-md-12">
 					<p>©2016 Grzegorz Rybczyński. All rights reserved.</p>
 				</div>
 			</div>
