--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	<div class="jumbotron">
 		<div class="container">
 			<div class="row">
-			<h1><span class="first-letter">H</span>ello, world!</h1>
-  			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut accumsan mollis tempor. Vivamus volutpat ligula at urna interdum placerat. Morbi vestibulum volutpat dolor id interdum.</p>
+			<h1><span class="first-letter">G</span>rzegorz Rybczyński</h1>
+  			<p>Portfolio</p>
   			<p><a class="btn btn-primary btn-lg" href="#section1" role="button">Więcej o mnie</a></p>
   			</div>
 		</div>
@@ -41,7 +41,7 @@
 				</div>
 				<div class="col-md-8">
 					<p>
-					Maecenas hendrerit metus id quam hendrerit, ut finibus ex finibus. Morbi magna orci, efficitur at feugiat a, cursus eu neque. Proin venenatis venenatis arcu sed bibendum. Nam egestas iaculis nisl, sed ullamcorper mauris sodales et. Vestibulum id volutpat libero, id ornare velit. Aenean finibus lobortis erat, sed semper est ullamcorper ac.
+					Nazywam się Grzegorz, mam 24 lat i jestem studentem czwartego tego roku teleinformatyki na Uniwersytecie Technologiczno - Przyrodniczym. Od jakiegoś czasu, uczę się na pozycję front end developer. Aktualnie skupiam się na nauce javascriptu oraz poszukuję swojej pierwszej pracy, aby zdobyć swoje pierwsze komercyjne doświadczenie w obszarze IT. 
 					</p>
 				</div>
 			</div>
@@ -104,9 +104,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-s-12 col-md-12">
+		<!--		<div class="col-s-12 col-md-12">
 					<div class="row second">
-						<div class="col-s-12 col-md-12">
+						<div class="col-s-12 col-md-4">
 							<p>Random Quote Machine</p>
 							<img class="img-responsive" src="images/praca4.jpg" alt="">
 							<div>
@@ -114,22 +114,22 @@
 							<a class="link-git" href="https://github.com/vitcum/Random-Quote-Machine" target="_blank">Github</a>
 							</div>
 						</div>
-						<div class="col-s-12 col-md-12">
+						<div class="col-s-12 col-md-4">
 							<p>Wyszukiwarka Krajów</p>
 							<img class="img-responsive" src="images/praca3.jpg" alt="">
 							<div>
 							<a class="link-live" href="https://vitcum.github.io/Search-Countries" target="_blank">Live</a>
 							<a class="link-git" href="https://github.com/vitcum/Search-Countries" target="_blank">Github</a>
 							</div>
-						</div>
-						<div class="col-s-12 col-md-12">
+					</div>
+							<div class="col-s-12 col-md-12">
 							<p>Tablica Kanban</p>
 							<img class="img-responsive" src="images/praca6.jpg" alt="">
 							<div>
 							<a class="link-live" href="https://vitcum.github.io/Tablica-Kanban" target="_blank">Live</a>
 							<a class="link-git" href="https://github.com/vitcum/Tablica-Kanban" target="_blank">Github</a>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -142,9 +142,9 @@
 					<p class="p-mail">grz.rybczynski@gmail.com</p>
 				</div>
 				<div class="col-s-12 col-md-4">
-					<a href="https://www.linkedin.com/in/grzegorz-rybczy%C5%84ski-b42b31120?trk=nav_responsive_tab_profile_pic" title="Skontaktuj się" target="_blank"><button class="icon-btn linkedin"><i class="fa fa-linkedin"></i></button></a>
-					<a href="https://plus.google.com/104462464214596411752" title="Skontaktuj się" target="_blank"><button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button></a>
-					<a href="https://github.com/vitcum" title="Skontaktuj się" target="_blank"><button class="icon-btn github"><i class="fa fa-github"></i></button></a>
+					<a class="social-icon" href="https://www.linkedin.com/in/grzegorz-rybczy%C5%84ski-b42b31120?trk=nav_responsive_tab_profile_pic" title="Skontaktuj się" target="_blank"><button class="icon-btn linkedin"><i class="fa fa-linkedin"></i></button></a>
+					<a class="social-icon" href="https://plus.google.com/104462464214596411752" title="Skontaktuj się" target="_blank"><button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button></a>
+					<a class="social-icon" href="https://github.com/vitcum" title="Skontaktuj się" target="_blank"><button class="icon-btn github"><i class="fa fa-github"></i></button></a>
 				</div>
 			</div>
 		</div>
